<resources>
    <string name="app_name">Qapital</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_font">fonts/Quicksand-SemiBold.ttf</string>
    <string name="text_font">fonts/AbrilFatface-Regular.ttf</string>
    <string name="fragment_title_goals">Goals</string>
    <string name="app_title">Goals App</string>
    <string name="something_one">Something</string>
    <string name="something_two">Something</string>
    <string name="rate_us">Rate us</string>
    <string name="share">Share</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="error_fetching_data">Unable to fetch data at this moment. Try again later.</string>
    <string name="your_rules">Your rules:</string>
    <string name="details_this_week">Last 7 days -\t</string>
    <string name="details_amount">%1$s/%2$s</string>
    <string name="rate_application">Rating application</string>
    <string name="share_application">Sharing application</string>
    <string name="settings_fragment">Opening settings fragment</string>
    <string name="about_fragment">Opening about fragment</string>
</resources>
