<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
            android:id="@+id/rateApplication"
            android:enabled="true"
            android:icon="@drawable/thumbs_up_svg"
            android:title="@string/rate_us"
            app:showAsAction="ifRoom" />
    <item
            android:id="@+id/shareApplication"
            android:enabled="true"
            android:icon="@drawable/share_svg"
            android:title="@string/share"
            app:showAsAction="ifRoom" />

    <group android:id="@+id/other">
        <item
                android:id="@+id/settingsFragment"
                android:enabled="true"
                android:icon="@drawable/settings_svg"
                android:title="@string/settings"
                app:showAsAction="ifRoom" />
        <item
                android:id="@+id/aboutFragment"
                android:enabled="true"
                android:icon="@drawable/information_svg"
                android:title="@string/about"
                app:showAsAction="ifRoom" />
    </group>
</menu>