<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
                name="goal"
                type="com.groundzero.qapital.data.goal.Goal"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".ui.details.DetailsFragment">

        <ImageView
                android:id="@+id/details_image"
                android:layout_width="match_parent"
                android:layout_height="220dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:scaleType="centerCrop"
                android:src="@{goal.image}"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/details_title"
                app:layout_constraintBottom_toTopOf="@id/details_amount"
                android:textSize="@dimen/details_title"
                android:text="@{goal.name}"
                android:textColor="@color/white"
                app:layout_constraintLeft_toLeftOf="@id/details_image"
                android:paddingStart="@dimen/mayor_padding"
                style="@style/TitleShadow"
                fontPath="@string/title_font"
                tools:ignore="MissingPrefix"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/details_amount"
                app:layout_constraintBottom_toTopOf="@id/progress"
                app:layout_constraintLeft_toLeftOf="@id/details_image"
                android:text="@{`$`+goal.targetAmount}"
                android:textSize="@dimen/details_subtitle"
                android:textColor="@color/white"
                android:paddingStart="@dimen/mayor_padding"
                style="@style/TitleShadow"
                fontPath="@string/title_font"
                tools:ignore="MissingPrefix"/>

        <ProgressBar
                app:layout_constraintBottom_toBottomOf="@id/details_image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="?android:attr/progressBarStyleHorizontal"
                android:id="@+id/progress"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:max="100"
                android:progress="45"
                android:padding="@dimen/mayor_padding"
                android:progressBackgroundTint="@color/white"
                android:progressTint="@color/white"/>
        <androidx.cardview.widget.CardView
                android:id="@+id/details_rules_list_navigation_parent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@id/details_image"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:backgroundTint="@color/sea_weed"
                app:cardElevation="@dimen/medium_elevation"
                app:cardCornerRadius="0dp">
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="@dimen/mayor_padding">
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/your_rules"
                        android:textColor="@color/white"
                        android:gravity="center"
                        android:textSize="@dimen/subtitle_size"
                        fontPath="@string/title_font"
                        tools:ignore="MissingPrefix"
                        style="@style/TitleShadow"/>
                <ListView
                        android:id="@+id/details_rules_list"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"/>
            </LinearLayout>

        </androidx.cardview.widget.CardView>
        <LinearLayout
                android:id="@+id/details_week_earnings_parent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/details_rules_list_navigation_parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:background="@color/lightBlue"
                android:padding="@dimen/mayor_padding"
                android:gravity="center"
                android:orientation="horizontal">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/details_this_week"
                    fontPath="@string/title_font"
                    android:textSize="@dimen/subtitle_size"
                    android:textColor="@color/sea"/>
            <TextView
                    android:id="@+id/details_week_earnings"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Example"
                    fontPath="@string/title_font"
                    android:textSize="@dimen/subtitle_size"
                    android:textColor="@color/ocean"/>
        </LinearLayout>
        <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/details_recycler_adapter"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:layout_constraintTop_toBottomOf="@id/details_week_earnings_parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>